# gmt-im-seismic

./: .gitignore  Cargo.toml  README.md  rle_latKs_sensitivity.m  setup.sh
data/: model_flowchart.html  model_payload_list.txt
src/: main.rs
