[package]
name = "gmt-im-seismic"
version = "0.1.0"
edition = "2021"
authors = ["Rodrigo Romano <rromano@gmto.org>"]
license = "MIT"
description = "GMT Integrated Model for Seismic Simulations"
repository = "https://github.com/GMTO-Integrated-Modeling/gmt-im-seismic"
# documentation = "https://docs.rs/gmt-im-seismic"
readme = "README.md"
categories = ["astronomy", "telescope", "mathematics", "science"]

[dependencies]
anyhow = "1.0.91"
gmt-fem = "5.1.1"
gmt_dos-actors = "11.1.0"
gmt_dos-clients = "4.4.0"
gmt_dos-clients_arrow = "2.1.1"
gmt_dos-clients_fem = "5.0.0"
gmt_dos-clients_io = "4.2.1"
gmt_dos-clients_m1-ctrl = "4.1.1"
gmt_dos-clients_mount = "4.1.0"
interface = { version = "1.3.2", package = "gmt_dos-actors-clients_interface" }
matio-rs = { version = "1.3.2", features = ["nalgebra"] }
nalgebra = "0.32"
skyangle = "0.2.2"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
gmt_mount-ctrl_controller = { git = "https://github.com/rodrigo-romano/gmt-controllers-code.git", branch = "mnt-c-windup"  }

